# ChangeLog for net-analyzer/rrdtool
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/rrdtool/ChangeLog,v 1.130 2007/09/06 17:54:16 jokey Exp $

  06 Sep 2007; Markus Ullmann <jokey@gentoo.org>
  -files/rrdtool-1.2.19-as-needed.patch,
  -files/rrdtool-1.2.19-as-needed.patch-new,
  -files/rrdtool-1.2.19-tclbindings.patch, -rrdtool-1.0.49.ebuild,
  -rrdtool-1.2.19.ebuild, -rrdtool-1.2.23.ebuild:
  Cleanup

  05 Sep 2007; <solar@gentoo.org> rrdtool-1.2.23-r1.ebuild:
  - remove failing patch that is no longer need for uclibc. Bug 191345

  20 Aug 2007; Markus Ullmann <jokey@gentoo.org> rrdtool-1.2.23-r1.ebuild:
  Stable on x86 wrt bug #186519

  16 Aug 2007; Christoph Mende <angelos@gentoo.org>
  rrdtool-1.2.23-r1.ebuild:
  Stable on amd64 wrt bug #186519

  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  rrdtool-1.2.23-r1.ebuild:
  ppc. stable

  04 Aug 2007; Hans de Graaff <graaff@gentoo.org> rrdtool-1.2.23-r1.ebuild:
  Add a blocker on dev-ruby/ruby-rrd because those bindings are now included in
  rrdtool, bug #180144.

  30 Jul 2007; Markus Rothe <corsair@gentoo.org> rrdtool-1.2.23-r1.ebuild:
  Stable on ppc64; bug #186519

  26 Jul 2007; Raúl Porcel <armin76@gentoo.org> rrdtool-1.2.23-r1.ebuild:
  alpha/ia64 stable wrt #186519

  26 Jul 2007; Jeroen Roovers <jer@gentoo.org> rrdtool-1.2.23-r1.ebuild:
  Stable for HPPA (bug #186519).

  25 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  rrdtool-1.2.23-r1.ebuild:
  Stable on sparc wrt #186519

*rrdtool-1.2.23-r1 (12 May 2007)

  12 May 2007; <pva@gentoo.org>
  +files/rrdtool-1.2.23-ruby-binding-compile.patch,
  +files/rrdtool-1.2.23-ruby-binding-configure.patch,
  +rrdtool-1.2.23-r1.ebuild:
  General ebuild cleanup. Fixed bug #177256.

*rrdtool-1.2.23 (05 May 2007)

  05 May 2007; Cedric Krier <cedk@gentoo.org>
  +files/rrdtool-1.2.23-tclbindings.patch, +rrdtool-1.2.23.ebuild:
  Version bump for bug #176899
