@@ -25,8 +25,13 @@ AUX rrdtool-1.2.23-tclbindings.patch 564 RMD160 082f66d7832e3b996cc9515a8c585afa
 MD5 3c4ebe6eb92e5c281c8584aa96b45f94 files/rrdtool-1.2.23-tclbindings.patch 564
 RMD160 082f66d7832e3b996cc9515a8c585afa791c7316 files/rrdtool-1.2.23-tclbindings.patch 564
 SHA256 83647ef379faa22bd6119f6687d49c74b18ac58baa2ef704aefab8664013dbd5 files/rrdtool-1.2.23-tclbindings.patch 564
+DIST rrdtool-1.0.49.tar.gz 1466897 RMD160 965cf352b4d3da64fdf44e0af5d1cf95072a283e SHA1 259a8445e429f0f04b59b0a959d965cd5a17eafb SHA256 20acb0aa347f1629c4d5529ab8afbe4986fe820555049af3f905653300e5ea74
 DIST rrdtool-1.2.15.tar.gz 1043064 RMD160 493e5b108ac363484eb4015c0962945c5fb9fb9e SHA1 4ac695aff26ab193a083c65513aad06ff36bad82 SHA256 b33d68da8a39bb0fc745c0202f3a58e73bfc6a9fd35d71fbd8979d40a5ef7397
 DIST rrdtool-1.2.23.tar.gz 1061530 RMD160 0c1147242adf476f5e93f4d59b553ee3ea378b23 SHA1 5da610e1c8bc01b80abc21ab9e98e004363b429c SHA256 4b1df00b23a74a1c81734dd274e72e00d8bb29b11e1f3d2938ff87691ece1f0f
+EBUILD rrdtool-1.0.49.ebuild 2692 RMD160 fd211965f19f6476e5be091a531c35671585f8b2 SHA1 e4a1a959dd3060277d7fff876bc55001b42b6d8c SHA256 cc22271bc6df1c43822a6954555aab8362be37b256127edd9111c520314c06d4
+MD5 030fee51a1f97670ccd3deb322397934 rrdtool-1.0.49.ebuild 2692
+RMD160 fd211965f19f6476e5be091a531c35671585f8b2 rrdtool-1.0.49.ebuild 2692
+SHA256 cc22271bc6df1c43822a6954555aab8362be37b256127edd9111c520314c06d4 rrdtool-1.0.49.ebuild 2692
 EBUILD rrdtool-1.2.15-r3.ebuild 2914 RMD160 fc0ea4b58a6413d5749eaa838db9ade120317930 SHA1 bf63c6de1bedcd2a03865a9cf8f9eec828885feb SHA256 b1f532af6b49a723823deefc8600e02c8040e7b16c2795a37f25f2735c044193
 MD5 9b97aed012e28da3807b9a25d6e4cfeb rrdtool-1.2.15-r3.ebuild 2914
 RMD160 fc0ea4b58a6413d5749eaa838db9ade120317930 rrdtool-1.2.15-r3.ebuild 2914
@@ -35,14 +40,17 @@ EBUILD rrdtool-1.2.23-r1.ebuild 2209 RMD160 ce765af1c3c56ed55a35484892038e5e277e
 MD5 bce21622a2d9b1f0032d2ffd18607427 rrdtool-1.2.23-r1.ebuild 2209
 RMD160 ce765af1c3c56ed55a35484892038e5e277eaf88 rrdtool-1.2.23-r1.ebuild 2209
 SHA256 7f61007dd2d25ae00204c6761ca797bbe4582a72afd1c17768ea0c935a9fe6b7 rrdtool-1.2.23-r1.ebuild 2209
-MISC ChangeLog 20074 RMD160 2733d9fce3e6ed267af489081b35d95ce8f83ae5 SHA1 b0d30364557ce1d52b304723d0eb6b740ecaba62 SHA256 b23dac3e6b57e98aad52cb4a44d44ea58b914bb499d9dbdab9e37f80dbc90ba7
-MD5 ec40e917d377b703bd0680a7035b0947 ChangeLog 20074
-RMD160 2733d9fce3e6ed267af489081b35d95ce8f83ae5 ChangeLog 20074
-SHA256 b23dac3e6b57e98aad52cb4a44d44ea58b914bb499d9dbdab9e37f80dbc90ba7 ChangeLog 20074
+MISC ChangeLog 20178 RMD160 80d09423ba197ed191a1e8007c7c6bc58fe7989a SHA1 9946e4604b54820ab6890b02c65ef0a8ee9ba28a SHA256 b0927f20c9b6fd07f319a1464efea7c74d2a0d5914e1a8ce0e4d743ba3229a50
+MD5 f284b17e815da617b49b880477ed91ec ChangeLog 20178
+RMD160 80d09423ba197ed191a1e8007c7c6bc58fe7989a ChangeLog 20178
+SHA256 b0927f20c9b6fd07f319a1464efea7c74d2a0d5914e1a8ce0e4d743ba3229a50 ChangeLog 20178
 MISC metadata.xml 241 RMD160 b010229ed860b6dadc3faa19006512f195e3ee55 SHA1 01721f8bf6f699f3647589a173ef1941fbd6dd1c SHA256 de63c7fc765937d32e93bda47d365a2e044ad3c6a70caff4ff5916dde97e6a3c
 MD5 1a739170238a1fae241a8a0df21462e9 metadata.xml 241
 RMD160 b010229ed860b6dadc3faa19006512f195e3ee55 metadata.xml 241
 SHA256 de63c7fc765937d32e93bda47d365a2e044ad3c6a70caff4ff5916dde97e6a3c metadata.xml 241
+MD5 4717359c4cd628c2076e69285fb84e77 files/digest-rrdtool-1.0.49 247
+RMD160 ddc06d4005032945b7a277d7758d0a027ee0d278 files/digest-rrdtool-1.0.49 247
+SHA256 92be4e02f4dea82bae2aa9aa72910563d09b11a05b09327a6053e9648650286d files/digest-rrdtool-1.0.49 247
 MD5 d04040e7f409bdc7d2ab4fce17702cdf files/digest-rrdtool-1.2.15-r3 247
 RMD160 772add36b866e1107c42ba47f6b9f6e938a758c4 files/digest-rrdtool-1.2.15-r3 247
 SHA256 62ab296ac4fc6e30708d669ec3df2e44b159d3b5075b047d2f551d4e1dea6f5b files/digest-rrdtool-1.2.15-r3 247
@@ -50,9 +58,9 @@ MD5 b0dbc89a76964c0f0f2b6137a4cd36c6 files/digest-rrdtool-1.2.23-r1 247
 RMD160 f7ddadb4521810a6c3f528b8c903df46abebdd3e files/digest-rrdtool-1.2.23-r1 247
 SHA256 bf726e4417452a4bd9b102c420e5e04b481a21ab7b55bd2ff7a39d3f57946bf8 files/digest-rrdtool-1.2.23-r1 247
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.6 (GNU/Linux)
+Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFG4D7Rz974XjDVpbkRAqgTAKCPPCqigS4GCF5Y2YzErQKcNTyQbQCcDbdR
-+2SsBG/mO7J+DaOJEpNKquA=
-=phE8
+iD8DBQFG6qkmz974XjDVpbkRAhQrAKCif43WQaLnysSUqs3fx3F/j+m39gCgkR/7
+fLoicV20TsKDdf8ACoTD8j8=
+=93pu
 -----END PGP SIGNATURE-----
