@@ -1,0 +1,3 @@
+MD5 fbe492dbf3d68abb1d86c2322e7ed44a rrdtool-1.0.49.tar.gz 1466897
+RMD160 965cf352b4d3da64fdf44e0af5d1cf95072a283e rrdtool-1.0.49.tar.gz 1466897
+SHA256 20acb0aa347f1629c4d5529ab8afbe4986fe820555049af3f905653300e5ea74 rrdtool-1.0.49.tar.gz 1466897
