@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/rrdtool
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/rrdtool/ChangeLog,v 1.130 2007/09/06 17:54:16 jokey Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/rrdtool/ChangeLog,v 1.131 2007/09/14 15:30:40 jokey Exp $
+
+  14 Sep 2007; Markus Ullmann <jokey@gentoo.org> +rrdtool-1.0.49.ebuild:
+  Add 1.0 series for FlowScan
 
   06 Sep 2007; Markus Ullmann <jokey@gentoo.org>
   -files/rrdtool-1.2.19-as-needed.patch,
